[package]
name = "rulox"
version = "0.1.0"
authors = ["Adam Hellberg <sharparam@sharparam.com>"]
edition = "2021"
description = "Rust implementation of the Lox language (bytecode version)"
homepage = "https://github.com/Sharparam/rulox"
repository = "https://github.com/Sharparam/rulox"
license = "MPL-2.0"
keywords = ["lox", "language"]
categories = ["command-line-utilities", "compilers"]

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.17", features = ["derive"] }
num_enum = "0.5.7"
thiserror = "1.0.31"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
