[package]
name = "rulox-cli"
version = "0.1.0"
authors = ["Adam Hellberg <sharparam@sharparam.com>"]
edition = "2021"
description = "CLI tool for rulox"
homepage = "https://github.com/Sharparam/rulox"
repository = "https://github.com/Sharparam/rulox"
license = "MPL-2.0"
keywords = ["lox", "language"]
categories = ["command-line-utilities"]

[[bin]]
name = "rulox"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.16", features = ["derive"] }
rulox = { path = "../lib" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
