[package]
name = "rulox-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "CLI tool for rulox"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["lox", "language"]
categories = ["command-line-utilities"]

[[bin]]
name = "rulox"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.68"
clap = { version = "3.2.22", features = ["derive"] }
rulox = { path = "../lib" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
