[package]
name = "rulox-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "CLI tool for rulox"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["lox", "language"]
categories = ["command-line-utilities"]

[[bin]]
name = "rulox"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "wrap_help"] }
rulox = { path = "../lib" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
