[package]
name = "rulox"
version = "0.1.0"
authors = ["Adam Hellberg <sharparam@sharparam.com>"]
edition = "2021"
description = "Rust implementation of the Lox language (bytecode version)"
homepage = "https://github.com/Sharparam/rulox"
repository = "https://github.com/Sharparam/rulox"
license = "MPL-2.0"
keywords = ["lox", "language"]
categories = ["compilers"]

[features]
trace = []

[dependencies]
num_enum = "0.5.7"
thiserror = "1.0.36"
tracing = "0.1.36"
