[package]
name = "rulox"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Rust implementation of the Lox language (bytecode version)"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["lox", "language"]
categories = ["compilers"]

[features]
trace = []

[dependencies]
num_enum = "0.5.9"
thiserror = "1.0.38"
tracing = "0.1.37"
