[package]
name = "rulox"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Rust implementation of the Lox language (bytecode version)"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["lox", "language"]
categories = ["compilers"]

[features]
trace = []

[dependencies]
num_enum = "0.7.3"
thiserror = "2.0.12"
tracing = "0.1.41"
